--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
     <div ng-controller="testController">
       <input type="text" ng-model="testBinder" name="name" value="">
       <p> {{ testBinder }} </p>
-      <button ng-click="getTestInput()" type="button" name="button">Hello There</button>
+      <button ng-click="getTestInput()" type="button" name="button">Hello World</button>
     </div>
   </body>
 </html>
